objects/Top_X_Designation__c.object
<CustomObject>
    <fields>
        <fullName>Document_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Document Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Top X Designations</relationshipLabel>
        <relationshipName>Top_X_Designations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Contract Flow Down</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hand Off</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Top X Designation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Top X Designation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Top X Designations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>